apps/cli/crates/onequery-cli/src/snapshots/onequery__commands__doctor__tests__report_command_open_opens_browser_and_text_output_snapshot.snap
---
source: crates/onequery-cli/src/commands/doctor.rs
expression: rendered
---
Created diagnostic report:
  <tmp>/onequery-data/reports/onequery-report-2026-04-23T03-20-00Z-req_123.md

Create a GitHub issue with:
  gh issue create -R wordbricks/onequery --label bug --label cli --title '[cli] decode_error' --body-file <tmp>/onequery-data/reports/onequery-report-2026-04-23T03-20-00Z-req_123.md

Opened a GitHub issue draft in your browser.
Paste the report contents before submitting.

Review it before sharing.
